Trying to get Jenkins Jobs to work

--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -13,5 +13,14 @@
         <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
             <div data-id="live" data-view="Countdown" data-title="Go Live" data-end="18-Aug-2014 13:00:00"></div>
         </li>
+        
+        <li data-row="2" data-col="2" data-sizex="2" data-sizey="1">
+              <div data-id="jenkins_jobs" data-view="Jenkins_Jobs" data-title="Jenkins Jobs" data-cols="8"></div>
+            </li>        
+
+
+        
+        
+        
     </ul>
 </div>
