--- a/widgets/jenkins_jobs/jenkins_jobs.scss
+++ b/widgets/jenkins_jobs/jenkins_jobs.scss
@@ -40,6 +40,7 @@ $notbuilt-color: #333;
       position: 0 4px;
     };
     padding-left: 28px;
+    font-size:5em;
   }
 
   .job[data-health="health-00to19"] .job-name {
