--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -1,5 +1,8 @@
 <% content_for :title do %>My super sweet dashboard<% end %>
 <div class="gridster">
+    <div data-id="takeover" data-view="Takeover"></div>
+    <div data-id="image_takeover" data-view="TakeoverImage"></div>
+    
     <ul>
 
         <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
