--- a/widgets/list_plea/list_plea.scss
+++ b/widgets/list_plea/list_plea.scss
@@ -58,6 +58,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   }
 
   .heading{
+    margin-top: 20px;
+    display: inline-block;
     color: #fff;
   }
 
