--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -1,22 +1,47 @@
+<script type='text/javascript'>
+$(function() {
+  Dashing.widget_base_dimensions = [370, 340]
+  Dashing.numColumns = 5
+  Dashing.cycleDashboards({timeInSeconds: 15, stagger: true});
+});
+</script>
+
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="my_widget" data-view="Text" data-title="makeaplea usage stats" data-text="Work in progress..." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="notused" data-view="Number" data-title="" style="background-color: #ff9618"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
+    <li data-row="1" data-col="4" data-sizex="1" data-sizey="2">
       <div data-id="detail" data-view="List_Plea" data-title="By Hearing Date" data-unordered="true"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="submissions_to_date" data-view="Number" data-title="Total submissions" style="background-color: #9c4274"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="not_guilty_pleas_to_date" data-view="Number" data-title="Total not guilty pleas" style="background-color: #96bf48;"></div>
     </li>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="guilty_pleas_to_date" data-view="Number" data-title="Total guilty"></div>
+    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="guilty_pleas_to_date" data-view="Number" data-title="Total guilty pleas"></div>
     </li>
+  </ul>
+</div>
+
+<div class="gridster">
+  <ul>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="my_widget" data-view="Text" data-title="makeaplea ops stats" data-text="Work in progress..." data-moreinfo="" style="background-color: #9c4274"></div>
+    </li>
+    <li data-row="2" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="coverage" data-view="Text" data-title="Code Coverage" data-text="79%"></div>
+    </li>
+    <li data-row="1" data-col="3" data-sizex="2" data-sizey="1">
+      <div data-id="jenkins_jobs" data-view="Jenkins_Jobs" data-title="Build Status"></div>
+    </li> 
+    <li data-row="2" data-col="3" data-sizex="2" data-sizey="1">
+      <div data-id="notused" data-view="Text" data-title="" style="background-color: #ff9618"></div>
+    </li> 
   </ul>
 </div>
