made content amends to make the dashboard stats easier to understand

--- a/widgets/number/number.scss
+++ b/widgets/number/number.scss
@@ -30,6 +30,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
   .more-info {
     color: $moreinfo-color;
+    margin: 0 10px;
+    font-size: 20px;
   }
 
   .updated-at {
