--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -16,7 +16,7 @@ $(function() {
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="my_widget" data-view="Text" data-title="makeaplea usage stats" data-text="Work in progress..." data-moreinfo=""></div>
+      <div data-id="my_widget" data-view="Text" data-title="makeaplea usage stats" data-text="" data-moreinfo=""></div>
     </li>
     <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="notused" data-view="Image" data-image="/bee.jpg" data-title="" style="padding: 0; background-color: #ff9618"  ></div>
@@ -25,13 +25,13 @@ $(function() {
       <div data-id="detail" data-view="List_Plea" data-title="By Hearing Date" data-unordered="true"></div>
     </li>
     <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="submissions_to_date" data-view="Number" data-title="Total submissions" style="background-color: #9c4274"></div>
+      <div data-id="submissions_to_date" data-view="Number" data-title="Total submissions" style="background-color: #9c4274" data-moreinfo="A submission can include pleas for multiple charges"></div>
     </li>
     <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="not_guilty_pleas_to_date" data-view="Number" data-title="Total not guilty pleas" style="background-color: #96bf48;"></div>
+      <div data-id="not_guilty_pleas_to_date" data-view="Number" data-title="Not guilty pleas" style="background-color: #96bf48;"></div>
     </li>
     <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="guilty_pleas_to_date" data-view="Number" data-title="Total guilty pleas" style="background-color: #ff9618"></div>
+      <div data-id="guilty_pleas_to_date" data-view="Number" data-title="Guilty pleas" style="background-color: #ff9618"></div>
     </li>
   </ul>
 </div>
