--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -7,6 +7,7 @@ $(function() {
 });
 */
 </script>
+<script type="text/javascript" src="/assets/snowstorm.js"></script>
 
 <!-- 
     funky colours: 
