--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -15,14 +15,12 @@ $(function() {
 -->
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="3" data-sizey="1">
-      <!-- <div data-id="my_widget" data-view="Text" data-title="makeaplea usage stats" data-text="" data-moreinfo=""></div> -->
-      <div data-id="graph" data-view="Rickshawgraph" data-title="makeaplea usage stats" data-text="" data-moreinfo=""
-      data-renderer="bar" data-color-scheme="rainbow" data-unstack="false"></div>
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div data-id="my_widget" data-view="Text" data-title="makeaplea usage stats" data-text="" data-moreinfo=""></div>
     </li>
-    <!-- <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="notused" data-view="Image" data-image="/bee.jpg" data-title="" style="padding: 0; background-color: #ff9618"  ></div>
-    </li> -->
+    </li>
     <li data-row="1" data-col="4" data-sizex="1" data-sizey="2">
       <div data-id="detail" data-view="List_Plea" data-title="By Hearing Date" data-unordered="true"></div>
     </li>
@@ -78,3 +76,4 @@ $(function() {
   </ul>
 </div>
 -->
+
