--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ body {
   background-color: $background-color;
   font-size: 20px;
   color: $text-color;
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
 }
 
 b, strong {
@@ -145,7 +145,7 @@ h3 {
 }
 
 .widget {
-  padding: 25px 12px;
+  padding: 5px;
   text-align: center;
   width: 100%;
   display: table-cell;
