Update Next Hearing Dates panel to show this week's hearings
[MAPDEV368]

--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -32,7 +32,7 @@ $(function() {
       </div>
     </li>
     <li data-row="1" data-col="5" data-sizex="1" data-sizey="4">
-      <div data-id="next_hearing_dates" data-view="List_Plea" data-title="Next 4 hearing dates" data-unordered="true"></div>
+      <div data-id="week_hearings" data-view="List_Plea" data-title="This week's hearings" data-unordered="true"></div>
     </li>
   </ul>
 </div>
