--- a/widgets/list_plea/list_plea.scss
+++ b/widgets/list_plea/list_plea.scss
@@ -34,7 +34,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   }
 
   li {
-    margin-bottom: 5px;
+    margin-bottom: 0;
   }
 
   .list-nostyle {
