--- a/dashboards/makeaplea.erb
+++ b/dashboards/makeaplea.erb
@@ -17,22 +17,26 @@ $(function() {
     <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="guilty_pleas_to_date" data-view="Map_Number" data-title="Guilty pleas" style="background-color: #ff9618"></div>
     </li>
-    <li data-row="1" data-col="2" data-sizex="3" data-sizey="2">
-      <div data-id="usage_graph" data-view="Highchart" data-title="" data-text="" data-moreinfo=""
+    <li data-row="1" data-col="2" data-sizex="2" data-sizey="2">
+      <div data-id="by_week_graph" data-view="Highchart" data-title="" data-text="" data-moreinfo=""
       data-renderer="column" data-color-scheme="rainbow" data-unstack="false" data-legend="true">
-        <div id="usage_graph">
+        <div id="by_week_graph">
         </div>
       </div>
     </li>
-    <li data-row="3" data-col="2" data-sizex="3" data-sizey="2">
-      <div data-id="regions_graph" data-view="Highchart" data-title="" data-text="" data-moreinfo=""
+    <li data-row="1" data-col="4" data-sizex="2" data-sizey="2">
+      <div data-id="response_time_graph" data-view="Highchart" data-title="" data-text="" data-moreinfo=""
+      data-renderer="column" data-color-scheme="rainbow" data-unstack="false" data-legend="true">
+        <div id="response_time_graph">
+        </div>
+      </div>
+    </li>
+    <li data-row="3" data-col="2" data-sizex="4" data-sizey="2">
+      <div data-id="by_court_graph" data-view="Highchart" data-title="" data-text="" data-moreinfo=""
       data-renderer="bar" data-color-scheme="rainbow" data-unstack="false" data-legend="true">
-        <div id="regions_graph">
+        <div id="by_court_graph">
         </div>
       </div>
-    </li>
-    <li data-row="1" data-col="5" data-sizex="1" data-sizey="4">
-      <div data-id="week_hearings" data-view="List_Plea" data-title="This week's hearings" data-unordered="true"></div>
     </li>
   </ul>
 </div>
